# fleurs-audio-downloader

./: .gitignore  README.md  pyproject.toml  test_cli.py
fleurs_downloader/: main.py
