[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fleurs-audio-downloader"
version = "0.1.0"
description = "Download audio samples from the FLEURS dataset"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "datasets>=2.14.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.0",
    "click>=8.0.0",
    "tqdm>=4.64.0",
]

[project.scripts]
fleurs-download = "fleurs_downloader.main:cli"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]
