[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fleurs-audio-downloader"
version = "0.1.0"
description = "Download audio samples from the FLEURS dataset"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "soundfile>=0.12.1",
    "librosa>=0.10.0",
    "click>=8.0.0",
    "tqdm>=4.64.0",
    "tensorflow-datasets>=4.9.2",
    "numpy>=1.24.4",
    "datasets>=2.20.0",
    "requests>=2.32.4",
    "scipy>=1.10.1",
]

[project.scripts]
fleurs-download = "fleurs_downloader.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["fleurs_downloader"]

[tool.uv]
dev-dependencies = [
    "black>=22.0.0",
    "isort>=5.0.0",
]
